Fix #36602: crash with freestyle and full sample render of empty render layer.